<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locomotion_mode</name>
  <version>0.0.2</version>
  <description>Library helping to implement locomotion modes for the PRL rovers. Takes care of standard interfaces such as subscribing, services, model parsing.</description>
  <maintainer email="miro.voellmy@esa.int">Miro Voellmy</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>urdf</depend>
  <depend>rover_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>